# openmath-for-python

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: 404.html  Gemfile  _config.yml  docs.md  index.md  openmath.md  openmath_cd.md  quickstart.md  tutorial.md
docs/_includes/: README.md
docs/_layouts/: docs.html
openmath/: __init__.py  cd.py
src/openmath/: __init__.py  parser.py  util.py  validator.py
src/openmath/cd/: __init__.py  contentdictionary.py  parser.py  symboldefinition.py
src/openmath/cdg/: __init__.py  contentdictionarygroup.py  parser.py
src/openmath/om/: __init__.py  omapplication.py  omattribution.py  ombase.py  ombinding.py  ombytearray.py  omerror.py  omfloat.py  omforeign.py  ominteger.py  omobject.py  omreference.py  omstring.py  omsymbol.py  omvariable.py  parser.py
src/test/: cd_mother.py  om_mother.py  sd_mother.py  test_om_are_om.py
src/test/cd/: test_contentdictionary.py
src/test/om/: test_om_are_om.py  test_omapplication.py  test_omattribution.py  test_ombinding.py  test_ombytearray.py  test_omfloat.py  test_ominteger.py  test_omstring.py  test_omsymbol.py  test_omvariable.py  test_parser.py
