[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openmath-for-python"
version = "0.0.1"
authors = [
    {name="Miguel MJ", email="miguelmjvg@gmail.com"},
]
description = "Unofficial implementation of the OpenMath standard for Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/unofficial-openmath/openmath-for-python"

